welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: not found: value caseOrange
	while (2*n<caseOrange+1) {
                   ^