welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
	var n=0
	while (2*n<caseOrange+1) {
		avance
	}
}
